[package]
name = "lnbits-rs"
version = "0.2.1"
edition = "2021"
description = "A Rust library for the LNbits API"
documentation = "https://docs.rs/lnbits-rs"
readme = "README.md"
repository = "https://github.com/thesimplekid/lnbits-rs"
keywords = ["lnbits", "rust", "lnbit", "client"]
categories = ["api-bindings"]
license = "MIT"
authors = ["thesimplekid <tsk@thesimplekid.com>"]

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-webpki-roots", "socks", "stream"] }
tokio = { version = "1.25", features = ["macros", "rt-multi-thread"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_derive = "1"
thiserror = "1"
url = "2.3"
tokio-test = "0.4"
futures = { version = "0.3.28", default-feature = false }
